Fixed problems with arquillian