@@ -132,7 +132,7 @@
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<maven.javadoc.version>2.10.4</maven.javadoc.version>
 		<maven.surefire.version>2.20</maven.surefire.version>
-		<mockito.version>2.9.0</mockito.version>
+		<mockito.version>2.18.3</mockito.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<logback.version>1.2.3</logback.version>
 		<hamcrest.version>2.0.0.0</hamcrest.version>
@@ -969,7 +969,7 @@
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
-						<argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
+						<argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-modules=ALL-SYSTEM</argLine>
 					</configuration>
 					<dependencies>
 						<dependency>
